# Arbitrage

./: .gitignore  README.md  README_backtest.md  README_data_detect.md  arbitrage_client.py  launch_detectors.py  simulator.py  token_ranking.txt
data_collection/: README.md  run_full_pipeline.py
data_collection/dynamic/: crawl_events_combined_streaming.py  crawl_events_v2_streaming.py  crawl_events_v3_streaming.py
data_collection/static_block/: Cargo.toml  run_every_5_blocks.py
data_collection/static_block/src/: main.rs  tycho_rpc.rs  utils.rs
detection/: cycle_detector.cpp  cycle_detector.h  main.cpp
detection_graphs/: CMakeLists.txt  directed_graph.cpp  hp_index.cpp  hp_index.h  main.cpp  pool.h
detection_old/: CMakeLists.txt  cycle_detector.cpp  cycle_detector.h  directed_graph.h  main.cpp  pool.h
examples/: backtest_next_block_positions.py  expected_output.txt  pool_update_arb.json  pool_update_no_arb.json  run_data_detection.py  run_demo.py  run_dynamic_detection_with_backtest.py  run_quote_sweep_backtest.py
graph/: example_output.json  snapshot_block_24589771.json
